# design

./: CMakeLists.txt
State/: CMakeLists.txt
State/inc/: GumballMachine.h
State/src/: GumballMachine.cpp  NoQuarterState.cpp  State.cpp
TestLog4cplus/: CMakeLists.txt  main.cpp
UnitTest/: CMakeLists.txt  JsonTest.cpp  StateTest.cpp  Template.cpp  UnitTest.cpp
